# Sipeed-NanoCluster-Server

./: .gitignore  README.md  agent_config.yaml.example  client_config.yaml  client_config_gunicorn.py  config.yaml  config.yaml.example  install_agent.sh  install_client.sh  install_server.sh  pyproject.toml  requirements.txt  server_gunicorn_config.py
docker/: Dockerfile  docker-entrypoint.sh
src/: agent.py  agent_system_reader.py  agent_temperature_reader.py  client.py  client_config.py  client_temperature_reader.py  server.py  server_config_manager.py  server_temperature_monitor.py
src/static/: style.css
src/templates/: index.html
